# self-equity-portfolio-viz

./: README.md  data_cleaning.ipynb  get_data.py  get_data_from_yahoo.py  get_eps_exp.ipynb  main.py  pyproject.toml  requirements.txt  sample.json  transform.py  transform_data_exp.ipynb
