[project]
name = "thebigproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dash>=3.0.4",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dotenv>=0.9.9",
    "finnhub-python>=2.4.23",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "yfinance",
]
